<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AAAECC"
    android:backgroundTint="#FAFAFA"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/sourceUnitSpinner"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginEnd="2dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <Spinner
        android:id="@+id/destinationUnitSpinner"
        android:layout_width="319dp"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sourceUnitSpinner"
        app:layout_constraintVertical_bias="0.102" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="213dp"
        android:layout_height="54dp"
        android:gravity="center"
        android:text="@string/currency_conversion_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/sourceUnitSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557" />

    <EditText
        android:id="@+id/inputUnit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="@string/enter_unit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destinationUnitSpinner"
        app:layout_constraintVertical_bias="0.076"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUnit"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/outcomeTextView"
        android:layout_width="153dp"
        android:layout_height="95dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destinationUnitSpinner"
        app:layout_constraintVertical_bias="0.597" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TO"
        app:layout_constraintBottom_toTopOf="@+id/destinationUnitSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sourceUnitSpinner" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="112dp"
        android:layout_height="63dp"
        android:onClick="backClick"
        android:text="@string/return_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.878"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outcomeTextView"
        app:layout_constraintVertical_bias="0.614"
        tools:ignore="OnClick" />

</androidx.constraintlayout.widget.ConstraintLayout>